@@ -51,23 +51,23 @@ my %host_form = (
   {ftype=>1, tag=>'router', name=>'Router (priority)', type=>'priority',
    len=>10, empty=>0,definfo=>['0','No'], iff=>['type','1']},
   {ftype=>1, tag=>'huser', name=>'User', type=>'text', len=>40, maxlen=>80,
-   empty=>1, iff=>['type','1']},
+   empty=>1, iff=>['type','[19]']},
   {ftype=>1, tag=>'dept', name=>'Dept.', type=>'text', len=>30, maxlen=>60,
-   empty=>1, chr=>1, iff=>['type','1']},
+   empty=>1, chr=>1, iff=>['type','[19]']},
   {ftype=>1, tag=>'location', name=>'Location', type=>'text', len=>30,
-   maxlen=>60, chr=>1, empty=>1, iff=>['type','1']},
+   maxlen=>60, chr=>1, empty=>1, iff=>['type','[19]']},
   {ftype=>1, tag=>'email', name=>'User Email', type=>'email', len=>30,
-   maxlen=>60, chr=>1, empty=>1, iff=>['type','1']},
+   maxlen=>60, chr=>1, empty=>1, iff=>['type','[19]']},
   {ftype=>1, tag=>'info', name=>'[Extra] Info', type=>'text', len=>50,
    maxlen=>100, empty=>1},
 
-  {ftype=>0, name=>'Equipment info', iff=>['type','1|101']},
+  {ftype=>0, name=>'Equipment info', iff=>['type','1|9|101']},
   {ftype=>101, tag=>'hinfo_hw', name=>'HINFO hardware', type=>'hinfo', len=>25,
    sql=>"SELECT hinfo FROM hinfo_templates WHERE type=0 ORDER BY pri,hinfo;",
-   addempty=>$hinfo_addempty_mode, empty=>1, iff=>['type','1']},
+   addempty=>$hinfo_addempty_mode, empty=>1, iff=>['type','[19]']},
   {ftype=>101, tag=>'hinfo_sw', name=>'HINFO software', type=>'hinfo',len=>25,
    sql=>"SELECT hinfo FROM hinfo_templates WHERE type=1 ORDER BY pri,hinfo;",
-   addempty=>$hinfo_addempty_mode, empty=>1, iff=>['type','1']},
+   addempty=>$hinfo_addempty_mode, empty=>1, iff=>['type','[19]']},
   {ftype=>1, tag=>'ether', name=>'Ethernet address', type=>'mac', len=>17,
    conv=>'U', iff=>['type','([19]|101)'], empty=>1},
   {ftype=>4, tag=>'card_info', name=>'Card manufacturer',
@@ -125,7 +125,7 @@ my %host_form = (
   {ftype=>4, name=>'Record created', tag=>'cdate_str', no_edit=>1},
   {ftype=>4, name=>'Last modified', tag=>'mdate_str', no_edit=>1},
   {ftype=>1, name=>'Expiration date', tag=>'expiration', len=>30,
-   type=>'expiration', empty=>1, iff=>['type','[147]']},
+   type=>'expiration', empty=>1, iff=>['type','[1479]']},
   {ftype=>4, name=>'Last lease issued by DHCP server', tag=>'dhcp_date_str',
    no_edit=>1, iff=>['type','[19]']}
  ],
@@ -139,29 +139,29 @@ my %restricted_host_form = (
   {ftype=>1, tag=>'domain', name=>'Hostname', type=>'domain',
    conv=>'L', len=>64},
   {ftype=>5, tag=>'ip', name=>'IP address', restricted_mode=>1,
-   iff=>['type','([169]|101)']},
+   iff=>['type','([16]|101)']},
   {ftype=>1, tag=>'cname_txt', name=>'Static alias for', type=>'domain',
    len=>64, iff=>['type','4'], iff2=>['alias','-1']},
   {ftype=>4, tag=>'id', name=>'Host ID'},
   {ftype=>4, tag=>'type', name=>'Type', type=>'enum', enum=>\%host_types},
   {ftype=>1, tag=>'huser', name=>'User', type=>'text', len=>40, maxlen=>80,
-   empty=>$main::SAURON_RHF{huser}, iff=>['type','1']},
+   empty=>$main::SAURON_RHF{huser}, iff=>['type','[19]']},
   {ftype=>1, tag=>'dept', name=>'Dept.', type=>'text', len=>30, maxlen=>60,
-   empty=>$main::SAURON_RHF{dept}, chr=>1, iff=>['type','1']},
+   empty=>$main::SAURON_RHF{dept}, chr=>1, iff=>['type','[19]']},
   {ftype=>1, tag=>'location', name=>'Location', type=>'text', len=>30, 
-   maxlen=>60, empty=>$main::SAURON_RHF{location}, chr=>1, iff=>['type','1']},
+   maxlen=>60, empty=>$main::SAURON_RHF{location}, chr=>1, iff=>['type','[19]']},
   {ftype=>1, tag=>'email', name=>'User Email', type=>'email', len=>30,
-   maxlen=>60, chr=>1, empty=>$main::SAURON_RHF{email}, iff=>['type','1']},
+   maxlen=>60, chr=>1, empty=>$main::SAURON_RHF{email}, iff=>['type','[19]']},
   {ftype=>1, tag=>'info', name=>'[Extra] Info', type=>'text', len=>50,
    maxlen=>100, empty=>$main::SAURON_RHF{info}},
 
-  {ftype=>0, name=>'Equipment info', iff=>['type','1|101']},
+  {ftype=>0, name=>'Equipment info', iff=>['type','1|9|101']},
   {ftype=>101, tag=>'hinfo_hw', name=>'HINFO hardware', type=>'hinfo', len=>25,
    sql=>"SELECT hinfo FROM hinfo_templates WHERE type=0 ORDER BY pri,hinfo;",
-   addempty=>$hinfo_addempty_mode, empty=>1, iff=>['type','1']},
+   addempty=>$hinfo_addempty_mode, empty=>1, iff=>['type','[19]']},
   {ftype=>101, tag=>'hinfo_sw', name=>'HINFO software', type=>'hinfo',len=>25,
    sql=>"SELECT hinfo FROM hinfo_templates WHERE type=1 ORDER BY pri,hinfo;",
-   addempty=>$hinfo_addempty_mode, empty=>1, iff=>['type','1']},
+   addempty=>$hinfo_addempty_mode, empty=>1, iff=>['type','[19]']},
   {ftype=>1, tag=>'ether', name=>'Ethernet address', type=>'mac', len=>17,
    conv=>'U', iff=>['type','[19]'], iff2=>['ether_alias_info',''],
    empty=>$main::SAURON_RHF{ether}},
@@ -179,15 +179,15 @@ my %restricted_host_form = (
   {ftype=>1, tag=>'misc', name=>'Misc.', type=>'text', len=>50,
    empty=>$main::SAURON_RHF{misc}, iff=>['type','(1|101)']},
 
-#  {ftype=>0, name=>'Group/Template selections', iff=>['type','[15]']},
-  {ftype=>10, tag=>'grp', name=>'Group', iff=>['type','[15]']},
+  {ftype=>0, name=>'Group/Template selections', iff=>['type','[159]']},
+  {ftype=>10, tag=>'grp', name=>'Group', iff=>['type','[159]']},
   {ftype=>11, tag=>'subgroups', name=>'SubGroups', fields=>2,
-   iff=>['type','[15]']},
+   iff=>['type','[159]']},
   {ftype=>6, tag=>'mx', name=>'MX template', iff=>['type','1']},
   {ftype=>7, tag=>'wks', name=>'WKS template', iff=>['type','1']},
   {ftype=>0, name=>'Record info'},
   {ftype=>1, name=>'Expiration date', tag=>'expiration', len=>30,
-   type=>'expiration', empty=>1, iff=>['type','[147]']}
+   type=>'expiration', empty=>1, iff=>['type','[1479]']}
  ],
  chr_group=>\$chr_group
 );
